--- a/KafkaProducer.ipynb
+++ b/KafkaProducer.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "producer.send('demo_test', value={'surnasdasdame':'parasdasdmar'})"
+    "producer.send('topic_stock', value={'surnasdasdame':'parasdasdmar'})"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/indexProcessed.csv\")"
+    "df = pd.read_csv(\"indexProcessed.csv\")"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "producer.flush() #clear data from kafka server"
+    "producer.flush() "
    ]
   },
   {
